# rbfrust

./: Cargo.toml  README.md
benches/: read_bench.rs
examples/: count_recs.rs  just_display.rs  just_read.rs
src/: field.rs  fieldtype.rs  layout.rs  lib.rs  mapper.rs  reader.rs  record.rs  util.rs
tests/: data.py  integration_test.rs  test.xml  test_ascii.data  test_utf8.data
tests/pcb/: pdb.py  pdb.xml  pdb_meta.xml  pdb_purged.txt  pdb_recs.txt
