[package]
name = "rbf"
version = "0.1.0"
authors = ["dandyvica <dandyvica@gmail.com>"]
description = "A library to read record-based files"
homepage = "https://github.com/dandyvica/rbfrust"
repository = "https://github.com/dandyvica/rbfrust"
documentation = "https://github.com/dandyvica/rbfrust"
keywords = ["flat", "record"]
categories = ["text-processing"]

[[example]]
name = "count_recs"

[[example]]
name = "just_read"

[dependencies]
xml-rs = "0.4.1"
#regex = "0.2"

